fixed grid & flexbox gaps, changed tip button structure, fixed button shape error

--- a/styles.css
+++ b/styles.css
@@ -155,6 +155,7 @@ ul {
   /* width: 100%; */
   font-size: var(--large-font-size);
   color: var(--white);
+  margin: 5px 0;
 }
 
 .button:hover {
@@ -303,15 +304,11 @@ ul {
     flex-direction: column; */
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-column-gap: 5px;
-    grid-row-gap: 15px;
-    /* grid-template-columns: 1fr 1fr;
-    grid-column-gap: 5px;
-    grid-row-gap: 15px; */
+    grid-column-gap: 10px;
   }
 }
 
-@media (min-width: 480px) {
+@media (min-width: 540px) {
   /* Medium screens */
   .tip {
     grid-template-columns: 1fr 1fr 1fr;
